--- a/index.html
+++ b/index.html
@@ -2,3 +2,6 @@
 layout: home
 # Index page
 ---
+<span id="busuanzi_value_site_pv">0</span>次访问
+
+<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
